--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="%PUBLIC_URL%/">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/flick-peek-512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -21,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Flick Peek</title>
+    <title>Flick Peak</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
